--- a/client/public/css/style.css
+++ b/client/public/css/style.css
@@ -3,20 +3,34 @@
     -webkit-text-fill-color: transparent;
     background-clip: text;
     -webkit-background-clip:text;
-    font-family:'Rubik', sans-serif;
+    font-family:'Rubik', sans-serif !important;
     background-image:url('https://images.unsplash.com/photo-1533122250115-6bb28e9a48c3?ixlib=rb-1.2.1&auto=format&fit=crop&w=1950&q=80');
-    font-size:250px;
-    letter-spacing:20px;
-    background-size:cover;
+    background-repeat: repeat;
+    font-weight: bold !important;
+    letter-spacing: 20px;
+    background-size:100%;
     position: absolute;
     left:50%;
-    top:50%;
+    top:35%;
     animation:animate 10s ease forwards alternate;
     transform: translate(-50%,-50%);
     animation-iteration-count: infinite;
     
     
 }
+
+	
+@-moz-document url-prefix() {
+    .landing {
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+        
+       
+    }
+}
+
+
+
 @keyframes animate{
     from{
         background-position: center 25%;
